[feature] create restic secret

--- a/ansible/roles/wordpress-namespace/vars/s3_secrets_vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/s3_secrets_vars.yml
@@ -5,6 +5,7 @@ s3_bucket:
       bucket_name: "{{ lookup('ansible.builtin.ini', 'bucket_name', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp') }}"
       keyId: "{{ lookup('ansible.builtin.ini', 'aws_access_key_id', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp') }}"
       accessSecret: "{{ lookup('ansible.builtin.ini', 'aws_secret_access_key', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp') }}"
+      resticPassword: "{{ lookup('ansible.builtin.ini', 'restic_password', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp') }}"
   os4:
     production:
       path: ""
