--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -82,6 +82,20 @@
         keyId: "{{ s3_bucket['os4'][inventory_deployment_stage]['keyId'] }}"
         accessSecret: "{{ s3_bucket['os4'][inventory_deployment_stage]['accessSecret'] }}"
 
+- name: Restic secret (OS3)
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: restic-for-os3
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      stringData:
+        resticPassword: "{{ s3_bucket['os3']['production']['resticPassword'] }}"
+        hostname: "www.epfl.ch"
+
 - name: Check if WordPress authentication secret exists
   kubernetes.core.k8s_info:
     api_version: v1
