--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -81,3 +81,17 @@
       stringData:
         keyId: "{{ s3_bucket['os4'][inventory_deployment_stage]['keyId'] }}"
         accessSecret: "{{ s3_bucket['os4'][inventory_deployment_stage]['accessSecret'] }}"
+
+- name: Restic secret (OS3)
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: restic-for-os3
+        namespace: "{{ inventory_namespace }}"
+      type: Opaque
+      stringData:
+        resticPassword: "{{ s3_bucket['os3']['production']['resticPassword'] }}"
+        hostname: "www.epfl.ch"
