[refactor] `openshift_login` → `inventory_openshift`
- while we are in there, change the `.url` thereof to `.domain` for
greater (future) scope of use.

--- a/ansible/inventory/prod/wordpress_namespaces.yml
+++ b/ansible/inventory/prod/wordpress_namespaces.yml
@@ -13,6 +13,6 @@ all_namespaces:
           "hosts":   # Not real hosts, hence the scarequotes
             namespace|svc0041p-wordpress:
               inventory_namespace: svc0041p-wordpress
-              openshift_login:
-                url: https://api.ocpitsp0001.xaas.epfl.ch:6443
+              inventory_openshift:
+                domain: ocpitsp0001.xaas.epfl.ch
                 insecure: true
