[fix] rename file s3_secrets_vars.yaml --> s3-secrets-vars.yaml

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -3,7 +3,7 @@
   with_items:
   - serving-secrets-{{ inventory_deployment_stage }}.yml
   - secrets-vars.yml
-  - s3_secrets_vars.yml
+  - s3-secrets-vars.yml
 
 - name: "SMTP password"
   kubernetes.core.k8s:
@@ -65,8 +65,8 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ s3_bucket['os3']['production']['keyId'] }}"
-        accessSecret: "{{ s3_bucket['os3']['production']['accessSecret'] }}"
+        keyId: "{{ s3_buckets['os3']['production']['keyId'] }}"
+        accessSecret: "{{ s3_buckets['os3']['production']['accessSecret'] }}"
 
 - name: MariaDB operator backup secret (OS4)
   kubernetes.core.k8s:
@@ -79,8 +79,8 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ s3_bucket['os4'][inventory_deployment_stage]['keyId'] }}"
-        accessSecret: "{{ s3_bucket['os4'][inventory_deployment_stage]['accessSecret'] }}"
+        keyId: "{{ s3_buckets['os4'][inventory_deployment_stage]['keyId'] }}"
+        accessSecret: "{{ s3_buckets['os4'][inventory_deployment_stage]['accessSecret'] }}"
 
 - name: Restic secret (OS3)
   kubernetes.core.k8s:
@@ -93,5 +93,4 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        resticPassword: "{{ s3_bucket['os3']['production']['resticPassword'] }}"
-        hostname: "www.epfl.ch"
+        resticPassword: "{{ s3_buckets['os3']['production']['resticPassword'] }}"
