--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -73,7 +73,7 @@
   tags:
     - menu_api
 
-- name: "WP_Operator"
+- name: "WordPress operator"
   include_tasks:
     file: wp-operator.yml
     apply:
