--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -54,7 +54,7 @@
         saferpay_prod_customerid: "{{ saferpay.prod.customerid | eyaml(eyaml_keys) | string }}"
         saferpay_prod_terminalid: "{{ saferpay.prod.terminalid | eyaml(eyaml_keys) | string }}"
 
-- name: MariaDB operator restore secret (OS3)
+- name: MariaDB operator restore secret (OpenShift 3)
   kubernetes.core.k8s:
     state: present
     definition:
@@ -68,7 +68,7 @@
         keyId: "{{ s3_buckets['os3']['production']['keyId'] }}"
         accessSecret: "{{ s3_buckets['os3']['production']['accessSecret'] }}"
 
-- name: MariaDB operator backup secret (OS4)
+- name: MariaDB operator backup secret (OpenShift 4)
   kubernetes.core.k8s:
     state: present
     definition:
@@ -82,7 +82,7 @@
         keyId: "{{ s3_buckets['os4'][inventory_deployment_stage]['keyId'] }}"
         accessSecret: "{{ s3_buckets['os4'][inventory_deployment_stage]['accessSecret'] }}"
 
-- name: Restic secret (OS3)
+- name: Restic secret (OpenShift 3)
   kubernetes.core.k8s:
     state: present
     definition:
