[fix] Some typo

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -83,6 +83,7 @@
     namespace: "{{ inventory_namespace }}"
   register: existing_wp_secret
 
+# TODO: We need to generate our own secrets instead of relying on api.wordpress.org
 - name: Generate WordPress authentication secrets
   ansible.builtin.uri:
     url: "https://api.wordpress.org/secret-key/1.1/salt/"
@@ -90,7 +91,7 @@
   register: wordpress_secret_response
   when: existing_wp_secret.resources | length == 0
 
-- name: Create or update WordPress authentication secret
+- name: Create WordPress authentication secret
   kubernetes.core.k8s:
     state: present
     definition:
