[rename] environment variables

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -2,7 +2,6 @@
   include_vars: "{{ item }}"
   with_items:
   - serving-secrets-{{ inventory_deployment_stage }}.yml
-  - secrets-vars.yml
   - s3-secrets-vars.yml
 
 - name: "SMTP password"
@@ -18,20 +17,6 @@
       data:
          SERVICE_WWP_NOREPLY_PASSWORD: "{{ smtp.password | eyaml(eyaml_keys) | b64encode }}"
   tags: httpd.secrets
-
-- name: Scality restore secret
-  kubernetes.core.k8s:
-    state: present
-    definition:
-      apiVersion: v1
-      kind: Secret
-      metadata:
-        name: restore-credentials
-        namespace: "{{ inventory_namespace }}"
-      type: Opaque
-      stringData:
-        aws-cli-credentials.ini: >-
-          {{ lookup("pipe", "keybase fs read " + keybase_restore_secret_path) }}
 
 - name: EPFL plugin secrets
   kubernetes.core.k8s:
@@ -61,7 +46,7 @@
       apiVersion: v1
       kind: Secret
       metadata:
-        name: s3-backup-credentials
+        name: epfl-s3-migrations-credentials
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
@@ -75,7 +60,7 @@
       apiVersion: v1
       kind: Secret
       metadata:
-        name: s3-credentials-for-os4
+        name: s3-backup-credentials
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
@@ -89,7 +74,7 @@
       apiVersion: v1
       kind: Secret
       metadata:
-        name: restic-for-os3
+        name: epfl-restic
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
