--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -85,10 +85,10 @@
             prefix: "MariaDB-{{ mariadb_name }}-{{ '%02d' | format(item|int) }}"
             endpoint: s3.epfl.ch
             accessKeyIdSecretKeyRef:
-              name: s3-credentials-for-os4
+              name: s3-backup-credentials
               key: keyId
             secretAccessKeySecretKeyRef:
-              name: s3-credentials-for-os4
+              name: s3-backup-credentials
               key: accessSecret
             tls:
               enabled: true
