[refactor] get secrets form yaml file

--- a/ansible/roles/wordpress-namespace/vars/s3-secrets-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/s3-secrets-vars.yml
@@ -1,20 +1,19 @@
+_os3_s3_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/os3-s3-credentials.yaml') | from_yaml }}"
+_os4_s3_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/os4-s3-credentials.yaml') | from_yaml }}"
 s3_buckets:
   os3:
     production:
-      path: ""
-      bucket_name: "{{ lookup('ansible.builtin.ini', 'bucket_name', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp') }}"
-      keyId: "{{ lookup('ansible.builtin.ini', 'aws_access_key_id', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp') }}"
-      accessSecret: "{{ lookup('ansible.builtin.ini', 'aws_secret_access_key', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp') }}"
-      resticPassword: "{{ lookup('ansible.builtin.ini', 'restic_password', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp') }}"
+      bucket_name: "{{ _os3_s3_secrets.production.bucket_name }}"
+      keyId: "{{ _os3_s3_secrets.production.keyId }}"
+      accessSecret: "{{ _os3_s3_secrets.production.accessSecret }}"
+      resticPassword: "{{ _os3_s3_secrets.production.resticPassword }}"
   os4:
     production:
-      path: ""
-      bucket_name: "{{ lookup('ansible.builtin.ini', 'bucket_name', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp-os4-prod') }}"
-      keyId: "{{ lookup('ansible.builtin.ini', 'aws_access_key_id', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp-os4-prod') }}"
-      accessSecret: "{{ lookup('ansible.builtin.ini', 'aws_secret_access_key', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp-os4-prod') }}"
+      bucket_name: "{{ _os4_s3_secrets.production.bucket_name }}"
+      keyId: "{{ _os4_s3_secrets.production.keyId }}"
+      accessSecret: "{{ _os4_s3_secrets.production.accessSecret }}"
     test:
-      path: ""
-      bucket_name: "{{ lookup('ansible.builtin.ini', 'bucket_name', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp-os4-test') }}"
-      keyId: "{{ lookup('ansible.builtin.ini', 'aws_access_key_id', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp-os4-test') }}"
-      accessSecret: "{{ lookup('ansible.builtin.ini', 'aws_secret_access_key', file='/keybase/team/epfl_wp_prod/aws-cli-credentials', section='backup-wwp-os4-test') }}"
+      bucket_name: "{{ _os4_s3_secrets.test.bucket_name }}"
+      keyId: "{{ _os4_s3_secrets.test.keyId }}"
+      accessSecret: "{{ _os4_s3_secrets.test.accessSecret }}"
 
