--- a/ansible/roles/wordpress-namespace/vars/s3-secrets-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/s3-secrets-vars.yml
@@ -1,19 +1,19 @@
-_os3_s3_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/os3-s3-credentials.yaml') | from_yaml }}"
-_os4_s3_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/os4-s3-credentials.yaml') | from_yaml }}"
-s3_buckets:
-  os3:
-    production:
-      bucket_name: "{{ _os3_s3_secrets.production.bucket_name }}"
-      keyId: "{{ _os3_s3_secrets.production.keyId }}"
-      accessSecret: "{{ _os3_s3_secrets.production.accessSecret }}"
-      resticPassword: "{{ _os3_s3_secrets.production.resticPassword }}"
-  os4:
-    production:
-      bucket_name: "{{ _os4_s3_secrets.production.bucket_name }}"
-      keyId: "{{ _os4_s3_secrets.production.keyId }}"
-      accessSecret: "{{ _os4_s3_secrets.production.accessSecret }}"
-    test:
-      bucket_name: "{{ _os4_s3_secrets.test.bucket_name }}"
-      keyId: "{{ _os4_s3_secrets.test.keyId }}"
-      accessSecret: "{{ _os4_s3_secrets.test.accessSecret }}"
+_epfl_migration_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/os3-s3-credentials.yaml') | from_yaml }}"
+_backup_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/os4-s3-credentials.yaml') | from_yaml }}"
+
+s3_epfl_migration_credentials:
+  bucket_name: "{{ _epfl_migration_secrets.bucket_name }}"
+  keyId: "{{ _epfl_migration_secrets.keyId }}"
+  accessSecret: "{{ _epfl_migration_secrets.accessSecret }}"
+  resticPassword: "{{ _epfl_migration_secrets.resticPassword }}"
+
+s3_backup_credentials:
+  production:
+    bucket_name: "{{ _backup_secrets.production.bucket_name }}"
+    keyId: "{{ _backup_secrets.production.keyId }}"
+    accessSecret: "{{ _backup_secrets.production.accessSecret }}"
+  test:
+    bucket_name: "{{ _backup_secrets.test.bucket_name }}"
+    keyId: "{{ _backup_secrets.test.keyId }}"
+    accessSecret: "{{ _backup_secrets.test.accessSecret }}"
 
