--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -46,12 +46,12 @@
       apiVersion: v1
       kind: Secret
       metadata:
-        name: epfl-s3-migrations-credentials
+        name: epfl-migrations-s3-credentials
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ s3_buckets['os3']['production']['keyId'] }}"
-        accessSecret: "{{ s3_buckets['os3']['production']['accessSecret'] }}"
+        keyId: "{{ s3_epfl_migration_credentials['keyId'] }}"
+        accessSecret: "{{ s3_epfl_migration_credentials['accessSecret'] }}"
 
 - name: MariaDB operator backup secret (OpenShift 4)
   kubernetes.core.k8s:
@@ -64,8 +64,8 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ s3_buckets['os4'][inventory_deployment_stage]['keyId'] }}"
-        accessSecret: "{{ s3_buckets['os4'][inventory_deployment_stage]['accessSecret'] }}"
+        keyId: "{{ s3_backup_credentials[inventory_deployment_stage]['keyId'] }}"
+        accessSecret: "{{ s3_backup_credentials[inventory_deployment_stage]['accessSecret'] }}"
 
 - name: Restic secret (OpenShift 3)
   kubernetes.core.k8s:
@@ -74,8 +74,8 @@
       apiVersion: v1
       kind: Secret
       metadata:
-        name: epfl-restic
+        name: epfl-migration-restic
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        resticPassword: "{{ s3_buckets['os3']['production']['resticPassword'] }}"
+        RESTIC_PASSWORD: "{{ s3_epfl_migration_credentials['resticPassword'] }}"
