--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -1,5 +1,3 @@
-- include_vars: menu-api-vars.yml
-  tags: always
 - include_vars: image-vars.yml
   tags: always
 
@@ -21,6 +19,7 @@
           PATH_SITES_FILE: ""
           NAMESPACE: "{{ inventory_namespace }}"
           DEBUG: {{ _debug }}
+          REQUEST_TIMEOUT: {{ _request_timeout }}
           LOCAL_ENV: false
           LABS_LINK_URL_FR: "https://www.epfl.ch/labs/fr/laboratoires/"
           LABS_LINK_URL_EN: "https://www.epfl.ch/labs/en/laboratories/"
@@ -63,6 +62,9 @@
     _debug: >-
       {{ false if inventory_namespace == "svc0041p-wordpress"
       else true }}
+    _request_timeout: >-
+      {{ 10000 if inventory_namespace == "svc0041p-wordpress"
+      else 30000 }}
   register: _menu_api_config_map
 
 - name: Deployment/menu-api
@@ -87,7 +89,7 @@
             serviceAccountName: menu-api
             containers:
               - name: menu-api
-                image: "quay-its.epfl.ch/svc0041/menu-api:2025-004"
+                image: "quay-its.epfl.ch/svc0041/menu-api:2025-012"
                 resources:
                   limits:
                     cpu: 500m
