[fix] Frugal resource reservation
This operator sits there doing nothing most of the day.

--- a/ansible/roles/wordpress-namespace/tasks/storage.yml
+++ b/ansible/roles/wordpress-namespace/tasks/storage.yml
@@ -47,6 +47,9 @@
         storageClass:
           defaultClass: false
           name: "wordpress-nfs-{{ item }}"
+        resources:
+          requests:
+            cpu: 100m
 
 - name: PersistentVolumeClaim/wordpress-data
   kubernetes.core.k8s:
