--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -46,12 +46,13 @@
       apiVersion: v1
       kind: Secret
       metadata:
-        name: epfl-migrations-s3-credentials
+        name: epfl-migrations
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ s3_epfl_migration_credentials['keyId'] }}"
-        accessSecret: "{{ s3_epfl_migration_credentials['accessSecret'] }}"
+        EPFL_MIGRATION_KEYID: "{{ s3_epfl_migration_credentials['keyId'] }}"
+        EPFL_MIGRATION_ACCESSSECRET: "{{ s3_epfl_migration_credentials['accessSecret'] }}"
+        RESTIC_PASSWORD: "{{ s3_epfl_migration_credentials['resticPassword'] }}"
 
 - name: MariaDB operator backup secret (OpenShift 4)
   kubernetes.core.k8s:
@@ -66,19 +67,6 @@
       stringData:
         keyId: "{{ s3_backup_credentials[inventory_deployment_stage]['keyId'] }}"
         accessSecret: "{{ s3_backup_credentials[inventory_deployment_stage]['accessSecret'] }}"
-
-- name: Restic secret (OpenShift 3)
-  kubernetes.core.k8s:
-    state: present
-    definition:
-      apiVersion: v1
-      kind: Secret
-      metadata:
-        name: epfl-migration-restic
-        namespace: "{{ inventory_namespace }}"
-      type: Opaque
-      stringData:
-        RESTIC_PASSWORD: "{{ s3_epfl_migration_credentials['resticPassword'] }}"
 
 - name: Check if WordPress authentication secret exists
   kubernetes.core.k8s_info:
