--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -39,7 +39,7 @@
         saferpay_prod_customerid: "{{ saferpay.prod.customerid | eyaml(eyaml_keys) | string }}"
         saferpay_prod_terminalid: "{{ saferpay.prod.terminalid | eyaml(eyaml_keys) | string }}"
 
-- name: MariaDB operator backup secret (OpenShift 4)
+- name: MariaDB operator backup / restore credentials
   kubernetes.core.k8s:
     state: present
     definition:
