[refactor] compute environment variables for secrets in s3-secrets-vars.yml file

--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -50,8 +50,8 @@
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        keyId: "{{ s3_backup_credentials[inventory_deployment_stage]['keyId'] }}"
-        accessSecret: "{{ s3_backup_credentials[inventory_deployment_stage]['accessSecret'] }}"
+        keyId: "{{ s3_backup_credentials['keyId'] }}"
+        accessSecret: "{{ s3_backup_credentials['accessSecret'] }}"
 
 - name: Check if WordPress authentication secret exists
   kubernetes.core.k8s_info:
