--- a/ansible/roles/wordpress-namespace/vars/s3-secrets-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/s3-secrets-vars.yml
@@ -8,12 +8,7 @@ s3_epfl_migration_credentials:
   resticPassword: "{{ _epfl_migration_secrets.resticPassword }}"
 
 s3_backup_credentials:
-  production:
-    bucket_name: "{{ _backup_secrets.production.bucket_name }}"
-    keyId: "{{ _backup_secrets.production.keyId }}"
-    accessSecret: "{{ _backup_secrets.production.accessSecret }}"
-  test:
-    bucket_name: "{{ _backup_secrets.test.bucket_name }}"
-    keyId: "{{ _backup_secrets.test.keyId }}"
-    accessSecret: "{{ _backup_secrets.test.accessSecret }}"
+  bucket_name: "{{ _backup_secrets[inventory_deployment_stage]['bucket_name'] }}"
+  keyId: "{{ _backup_secrets[inventory_deployment_stage]['keyId'] }}"
+  accessSecret: "{{ _backup_secrets[inventory_deployment_stage]['accessSecret'] }}"
 
