--- a/ansible/roles/wordpress-namespace/tasks/mariadb.yml
+++ b/ansible/roles/wordpress-namespace/tasks/mariadb.yml
@@ -81,7 +81,7 @@
         maxRetention: 720h
         storage:
           s3:
-            bucket: "{{ s3_backup_credentials[inventory_deployment_stage]['bucket_name'] }}"
+            bucket: "{{ s3_backup_credentials['bucket_name'] }}"
             prefix: "MariaDB-{{ mariadb_name }}-{{ '%02d' | format(item|int) }}"
             endpoint: s3.epfl.ch
             accessKeyIdSecretKeyRef:
