[refactor] variables usage style

--- a/ansible/roles/wordpress-namespace/tasks/wp-operator.yml
+++ b/ansible/roles/wordpress-namespace/tasks/wp-operator.yml
@@ -11,19 +11,19 @@
         name: wp-backups
         namespace: "{{ inventory_namespace }}"
       data:
-        S3_BACKUP_BUCKET: "{{ s3_backup_credentials['bucket_name'] }}"
+        S3_BACKUP_BUCKET: "{{ s3_backup_credentials.bucket_name }}"
 
-- name: ConfigMap/epfl-migrations
+- name: ConfigMap/epfl-migration
   kubernetes.core.k8s:
     state: present
     definition:
       apiVersion: v1
       kind: ConfigMap
       metadata:
-        name: epfl-migrations
+        name: epfl-migration
         namespace: "{{ inventory_namespace }}"
       data:
-        EPFL_MIGRATION_BUCKET: "{{ s3_epfl_migration_credentials['bucket_name'] }}"
+        EPFL_MIGRATION_BUCKET: "{{ s3_epfl_migration_credentials.bucket_name }}"
 
 - name: Credentials required to restore from previous (OpenShift 3) production backups
   kubernetes.core.k8s:
@@ -32,10 +32,10 @@
       apiVersion: v1
       kind: Secret
       metadata:
-        name: epfl-migrations
+        name: epfl-migration
         namespace: "{{ inventory_namespace }}"
       type: Opaque
       stringData:
-        EPFL_MIGRATION_KEYID: "{{ s3_epfl_migration_credentials['keyId'] }}"
-        EPFL_MIGRATION_ACCESSSECRET: "{{ s3_epfl_migration_credentials['accessSecret'] }}"
-        RESTIC_PASSWORD: "{{ s3_epfl_migration_credentials['resticPassword'] }}"
+        EPFL_MIGRATION_KEYID: "{{ s3_epfl_migration_credentials.keyId }}"
+        EPFL_MIGRATION_ACCESSSECRET: "{{ s3_epfl_migration_credentials.accessSecret }}"
+        RESTIC_PASSWORD: "{{ s3_epfl_migration_credentials.resticPassword }}"
