--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -110,3 +110,16 @@
       - grafana
   tags:
     - grafana
+
+- name: Monitoring
+  when:
+  - inventory_openshift is defined
+  - inventory_openshift.domain != "okd-test.fsd.team"
+  include_tasks:
+    file: monitoring.yml
+    apply:
+      tags:
+        - monitoring
+  tags:
+    - monitoring
+
