Add Leonardo's ssh Key

--- a/ansible/roles/wordpress-openshift-namespace/vars/mgmt-vars.yml
+++ b/ansible/roles/wordpress-openshift-namespace/vars/mgmt-vars.yml
@@ -21,6 +21,7 @@ _mgmt_access_list_wwp_test_and_wwp:
   - rosa.maggi@epfl.ch
   - ehouarn.duriaux@epfl.ch
   - saskya.panchaud@epfl.ch
+  - leonardo.surdez@epfl.ch
 
 _mgmt_access_list_wwp_test_only: []
 
