--- a/ansible/roles/wordpress-namespace/vars/monitoring-secrets.yml
+++ b/ansible/roles/wordpress-namespace/vars/monitoring-secrets.yml
@@ -1,4 +1,5 @@
-_monitoring_secrets: "{{ lookup('file', '/keybase/team/epfl_wp_prod/monitoring-internal.yml') | from_yaml }}"
+_keybase_team_wp: "{{ 'epfl_wp_prod' if inventory_namespace == 'svc0041p-wordpress' else 'epfl_wp_test' }}"
+_monitoring_secrets: "{{ lookup('file', '/keybase/team/{{ _keybase_team_wp }}/monitoring-internal.yml') | from_yaml }}"
 _telegram_alert: "{{ _monitoring_secrets.telegram_alert }}"
 
 telegram_bot_token: "{{ _telegram_alert.bot_token }}"
