--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -36,6 +36,7 @@
         saferpay_test_customerid: "{{ saferpay.test.customerid | eyaml(eyaml_keys) | string }}"
         saferpay_test_terminalid: "{{ saferpay.test.terminalid | eyaml(eyaml_keys) | string }}"
         saferpay_prod_apiusername: "{{ saferpay.prod.apiusername | eyaml(eyaml_keys) }}"
+        saferpay_prod_apipassword: "{{ saferpay.prod.apipassword | eyaml(eyaml_keys) }}"
         saferpay_prod_customerid: "{{ saferpay.prod.customerid | eyaml(eyaml_keys) | string }}"
         saferpay_prod_terminalid: "{{ saferpay.prod.terminalid | eyaml(eyaml_keys) | string }}"
 
